--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
    <body>
       <!--==================== HEADER ====================-->
       <header class="header" id="header">
-         
+         <nav class="nav container">
+            <a href="#" class="nav__logo">
+               <img src="assets/img/logo.svg" alt="logo">
+            </a>
+         </nav>
+
       </header>
 
       <!--==================== MAIN ====================-->
