Update the nav bar
Update nav bar, currently still sitting horizontally.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,35 @@
             <a href="#" class="nav__logo">
                <img src="assets/img/logo.svg" alt="logo">
             </a>
+
+            <div class="nav__menu" id="nav-menu">
+               <ul class="nav__List"> 
+
+                  <li class="nav__item">
+                     <a href="#" class="nav__link">Home</a>
+                  </li>
+
+                  <li class="nav__item">
+                     <a href="#" class="nav__link">Pricing</a>
+                  </li>
+
+                  <li class="nav__item">
+                     <a href="#" class="nav__link">Events</a>
+                  </li>
+
+                  <li class="nav__item">
+                     <a href="#" class="nav__link">Contact</a>
+                  </li>
+
+               </ul>
+
+               <div class="nav__buttons">
+               
+                  <a href="#" class="nav__button-link">Login</a>
+                  <a href="#" class="nav__button-ghost">Get Started</a>
+
+               </div>
+            </div>
          </nav>
 
       </header>
