--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
                   <a href="#" class="nav__button-ghost">Get Started</a>
 
                </div>
+
+               <!-- close button -->
+               <div class="nav__close" id="nav-close">
+                  <i class="ri-close-line"></i>
+               </div>
+
             </div>
          </nav>
 
