--- a/index.html
+++ b/index.html
@@ -53,9 +53,13 @@
 
                <!-- close button -->
                <div class="nav__close" id="nav-close">
-                  <i class="ri-close-line"></i>
+                  <i class="ri-close-line"></i> 
                </div>
-
+            </div>
+            
+            <!-- Toggle button -->
+            <div class="nav__toggle" id="nav-toggle">
+               <i class="ri-menu-line"></i>
             </div>
          </nav>
 
