Update menu bar
Update so the menu will show and disappear when the user toggle it. Making a very appealing design.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </a>
 
             <div class="nav__menu" id="nav-menu">
-               <ul class="nav__List"> 
+               <ul class="nav__list"> 
 
                   <li class="nav__item">
                      <a href="#" class="nav__link">Home</a>
@@ -74,7 +74,7 @@
       </main>
       
       <!--=============== GSAP ===============-->
-      <script src=""></script>
+      <script src="assets/js/gsap.min.js"></script>
 
       <!--=============== MAIN JS ===============-->
       <script src="assets/js/main.js"></script>
