--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
 
                <div class="home__images">
                   <img src="assets/img/img-4.svg" alt="image" class="home__img-4">
+                  <img src="assets/img/img-3.svg" alt="image" class="home__img-3">
+                  <img src="assets/img/img-2.svg" alt="image" class="home__img-2">
+                  <img src="assets/img/img-1.svg" alt="image" class="home__img-1">
                </div>
             </div>
          </section>
